# WatsonCTF

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  new_technique.md
.github/workflows/: ci.yml
tests/: conftest.py  create_fixtures.py  test_containers.py  test_images.py  test_integration.py  test_network.py  test_strings.py
watson/: cli.py  config.py  modules.py  quotes.py
watson/cli/: __init__.py  _shared.py  app.py  config_cmd.py  doctor.py  examine.py  modules.py
watson/core/: __init__.py  examiner.py  report.py  triage.py
watson/techniques/: __init__.py  base.py
watson/techniques/audio/: __init__.py  spectrogram.py
watson/techniques/containers/: __init__.py  binwalk_wrap.py  zip_extract.py
watson/techniques/disk/: __init__.py  filesystem.py  partition.py
watson/techniques/documents/: __init__.py  pdf_meta.py
watson/techniques/images/: __init__.py  appended.py  lsb.py  metadata.py
watson/techniques/network/: credential_sniffer.py  dns_exfil.py  http_objects.py  pcap_meta.py  stream_reassembly.py
watson/techniques/universal/: __init__.py  cipher_id.py  encoding_detect.py  strings_scan.py
